fix: 서비스 레이어 버그 및 코드 품질 개선 (#39)
- BranchService.softDelete: 세션 무효화 누락 수정
- BranchService.hardDelete: 소프트삭제 선행 검증 및 세션 무효화 추가
- AdminService.softDelete/hardDelete: save 성공 후 세션 무효화하도록 순서 변경
- BranchService: 중첩 try-catch 구조를 단일 구조로 평탄화
- ProductService: changeStatus 제거, activate/deactivate 메서드로 분리
- BranchAccount: isDeleted → isSoftDeleted 이름 통일
- TagService: Collectors.toList() → .toList() 통일